--- a/08_Python/07.自动抢票.md
+++ b/08_Python/07.自动抢票.md
@@ -7,24 +7,45 @@
 
 ```py
 from selenium import webdriver
-# from time import sleep
+from time import sleep
 # import traceback
 
-class Auto_Buy(object):
-    pass
+
+class AutoBuy(object):
+    def __init__(self, url, username, passwd):
+        self.url = url
+        self.username = username
+        self.passwd = passwd
+        self.driver = webdriver.Chrome()  # 调用chrome浏览器
+
+    def login(self):
+        self.driver.get(self.url)
+
+        # login button
+        button = self.driver.find_element_by_class_name('css-1i4id9g')
+        print(button, 1111)
+        button.click()
+
+    def test_baidu(self):
+        self.driver.get('https://www.baidu.com/')
+        # login button
+        alink = self.driver.find_element_by_name('tj_login')
+        print(alink.get_attribute('innerHTML'), 1111)
+        print(alink.get_attribute('innerHTML'), 1111)
+        alink.click()
+        sleep(3)
+
+    def start_buy(self):
+        # self.test_baidu()
+        self.login()
+
 
 if __name__ == '__main__':
-    print('111')
-    driver = webdriver.Chrome()  # 调用chrome浏览器
     # 有可能跳转中文网站，根据 ip 来的，开启全局代理
     url = "https://www.sephora.com/product/diorshow-iconic-overcurl-catwalk-spectacular-makeup-look-set-P441308"
-    driver.get(url)
-    # driver.find_element_by_name("q").send_keys("hahah")
-    # Find and click the 'search' button
-    button = driver.find_element_by_class_name('css-ezh792')
-    print(button, 1111)
-    # Interact with elements
-    button.click()  
+    username = 'vincexgliu@gmail.com'
+    passwd = 'ZAQ1xsw2'
+    AutoBuy(url, username, passwd).start_buy()
 ```
 
 参考：
