--- a/04_Framework_and_Lib/1_react/08_learn_react/0000.最佳实践.md
+++ b/04_Framework_and_Lib/1_react/08_learn_react/0000.最佳实践.md
@@ -1,6 +1,9 @@
-## 目录及文件命名
+# react 最佳实践
+
+## 一 目录及文件命名
 
 以功能划分为主，业务逻辑隔离，好维护和扩展
+
 ```bash
 /src
   /app.js # app 顶层文件
@@ -24,6 +27,7 @@
       /redux
         /action.js # 汇总所有 actions
         /reducer.js # 汇总所有 reducer
+        /inital-state # 一级目录统一管理 inital state 太多也不好
       /index.jsx
       /index.scss
       /home-redux.js # 供home使用的 redux，包括action，reducer
@@ -39,10 +43,8 @@
       /reset.css
       /global.css
     /redux # 整体 redux
-      /actions.js
-      /reducer.js
-      /constant.js
-      /store.js
+      /root-reducer.js # 引入所有 reducer  
+      /config-store.js # 生成 store，中间件引入等  
     /mock # mock 数据
     /utils # 工具，常量，不同通过 mock 模拟的本地假数据等
       /utils.js # 工具函数
@@ -75,15 +77,15 @@ app.js root components, index.js traditional and actual entry file.
 
 
 
-## 开发
+## 二 开发
 
-### 引入 scss
+### 2.1 引入 scss
 
 安装 `node-sass` 就好了，重命名 `app.css` 为 `app.scss`，然后在 `app.scss` 中统一管理。
 
 [Adding a Sass Stylesheet](https://facebook.github.io/create-react-app/docs/adding-a-sass-stylesheet)
     
-### eslint + prettier 代码检查
+### 2.2 eslint + prettier 代码检查
 
 react 已经集成 eslint，如何覆盖默认配置？现在还没应用场景（强制加逗号？）。
 
@@ -136,4 +138,258 @@ npm i -D prettier eslint-plugin-prettier
 
 [Using Prettier with VS Code and Create React App](https://medium.com/technical-credit/using-prettier-with-vs-code-and-create-react-app-67c2449b9d08)
 
-## 引入 react router 及实现懒加载
+## 三 引入 redux
+
+### 3.1 安装依赖
+
+```bash
+npm i redux react-redux
+```
+
+其中 react-redux 提供 props 和 dispatch 的映射
+
+### 3.2 针对上面目录在项目中引入
+
+```bash
+/src
+  /pages # 具体页面
+    /Home
+      /components # 仅仅供 home 使用的组件，包含单独的 redux 等
+        /Eat
+          /eat-redux.js
+      /redux
+        /action.js # 汇总所有 actions
+        /reducer.js # 汇总所有 reducer
+        /inital-state # 一级目录统一管理 inital state 太多也不好
+      /index.jsx
+      /home-redux.js # 供home使用的 redux，包括action，reducer
+  /List
+    /index.jsx
+    /list-redux.js # 供home使用的 redux，包括action，reducer
+    /redux
+      /action.js # 汇总所有 actions
+      /reducer.js # 汇总所有 reducer
+      /inital-state # 一级目录统一管理 inital state 太多也不好
+  /services # 不是所有东西都可以提取为组件，service 给组件（pages）提供服务
+    /redux # 整体 redux
+      /root-reducer.js # 引入所有 reducer  
+      /config-store.js # 生成 store，中间件引入等  
+```
+
+#### 3.2.1 处理 redux 业务逻辑
+
+对于 home 以及 home 子组件的 redux 具体业务逻辑由 `*-redux.js` 维护，比如
+
+- `/Home/home-redux.js`
+
+```js
+// this one group, eazy develop and maintain
+const HOME_SEND_FIRST_DATA = 'HOME_SEND_FIRST_DATA';
+
+export const setHomeAction = exampleData => {
+  return {
+    type: HOME_SEND_FIRST_DATA,
+    exampleData,
+  };
+};
+// just name reducer fn to reducer, need not add pre-name
+// any actions will be received by reducers
+export const reducer = (state, action) => {
+  switch (action.type) {
+    case HOME_SEND_FIRST_DATA:
+      return {
+        ...state,
+        homeReduxData: action.exampleData,
+      };
+    default:
+      return state;
+  }
+};
+
+// this is other one if has
+```
+
+- `/Home/components/Eat/eat-redux.js`
+
+```js
+const EAT_SEND_FIRST_DATA = 'EAT_SEND_FIRST_DATA';
+export const setEatAction = exampleData => {
+  return {
+    type: EAT_SEND_FIRST_DATA,
+    exampleData,
+  };
+};
+export const reducer = (state, action) => {
+  switch (action.type) {
+    case EAT_SEND_FIRST_DATA:
+      return {
+        ...state,
+        eatReduxData: action.exampleData,
+      };
+    default:
+      return state;
+  }
+};
+```
+
+#### 3.2.2 汇总单个页面 reducer/action
+
+而 `/pages/*` 下面一级页面组件下的一级子目录 `redux` 文件夹下汇总当前页面组件的 `inital state` 以及 actions 和 reducers，比如 `home` 页面下
+
+- `/pages/[xx/]*-redux.js`
+
+```js
+// /Home/redux/action.js
+export { setHomeAction } from '../home-redux';
+export { eatAction } from '../components/Eat/eat-redux';
+
+// /Home/redux/inital-state.js
+export const initialState = {
+  eatReduxData: 'eat redux data',
+  homeReduxData: 'home redux data',
+};
+
+// /Home/redux/reducer.js
+import { reducer as homeReducer } from '../home-redux';
+import { reducer as eatReducer } from '../components/Eat/eat-redux';
+import { initialState } from './initial-state';
+
+const reducers = [homeReducer, eatReducer];
+
+export default function reducer(state = initialState, action) {
+  let newState;
+  switch (action.type) {
+    default:
+      newState = initialState;
+      break;
+  }
+
+  // export all reducers
+  return reducers.reduce((s, r) => r(s, action), newState);
+}
+```
+
+这里 inital state 需要注意，可以在不同页面建立不同的 inital state，在汇总项目的 roor reducer 中会加以说明。
+
+#### 3.2.3 汇总项目 reducer（root reducer）
+
+最后在 `/services/redux/*` 目录下汇总所有 reducer，create store 以及引入中间等。
+
+- `/services/redux/*`
+
+```js
+// /services/redux/config-store.js
+import { createStore } from 'redux';
+import rootReducer from './root-reducer';
+
+export default createStore(
+  rootReducer
+);
+
+// /services/redux/root-reducer.js
+import { combineReducers } from 'redux';
+import homeReducer from '../../pages/Home/redux/reducer';
+import listReducer from '../../pages/List/redux/reducer';
+
+const reducerMap = {
+  // this is state property, initial state in different page is isolate
+  home: homeReducer,
+  list: listReducer,
+};
+
+// root reducer
+export default combineReducers(reducerMap);
+```
+
+在 create store 的时候可以根据传给 root reducer 的子 reducer 属性名，给项目 store 创建对应属性，作为不同页面的 inital state。比如，上面初始化的 state 为：
+
+```js
+{
+  home: {
+    eatReduxData: 'eat redux data',
+    homeReduxData: 'home redux data',
+  },
+  list: {
+    listReduxData: 'list redux data',
+  }
+}
+```
+
+> 具体可看下 `combineReducers` 和 `createStore` 的实现原理。
+
+#### 3.2.4 在页面中引用
+
+1） `index.js` 引入 `Provider` 组件，作为项目根组件，然后把 `store` 注入
+
+- `src/index.js`
+
+```js
+import React from 'react';
+import ReactDOM from 'react-dom';
+
+import { Provider } from 'react-redux';
+import store from './services/redux/config-store';
+
+import App from './App';
+
+console.log(store, 233333);
+
+ReactDOM.render(
+  <Provider store={store}>
+    <App />
+  </Provider>,
+  document.getElementById('root')
+);
+```
+
+2）通过 `connect` 使所有自组件可以访问在 `Provider` 中注入的 `store`：   
+
+其中 `action` 从当前页面的 `./redux/action.js` 中导入
+
+以 `/home/index.jsx` 为例：
+
+```js
+import * as React from 'react';
+import { connect } from 'react-redux';
+
+import { setHomeAction } from './redux/action';
+
+class PureHome extends React.Component {
+  changeHomeRedux = () => {
+    this.props.setHomeAction(
+      `home redux time ${new Date().getMinutes()}:${new Date().getSeconds()}`
+    );
+  };
+
+  render() {
+    return (
+      <div id="cityGuideHome">
+        <p>this is home</p>
+        <p>{this.props.homeReduxData}</p>
+        <button onClick={this.changeHomeRedux}>changeHomeRedux</button>
+      </div>
+    );
+  }
+}
+
+// redux
+const mapStateToProps = state => {
+  return {
+    homeReduxData: state.home.homeReduxData,
+  };
+};
+const mapDispatchToProps = dispatch => {
+  return {
+    setHomeAction: homeData => dispatch(setHomeAction(homeData)),
+  };
+};
+const Home = connect(
+  mapStateToProps,
+  mapDispatchToProps
+)(PureHome);
+
+export default Home;
+```
+
+> 感觉没有必要引入 redux-logger 中间件，因为 redux-dev 已经很好用了。但异步用的 redux-chunk 还是有用的，暂时没有应用场景。
+
