--- a/04_Framework_and_Lib/1_react/08_learn_react/0000.最佳实践.md
+++ b/04_Framework_and_Lib/1_react/08_learn_react/0000.最佳实践.md
@@ -2,7 +2,7 @@
 
 ## 一 目录及文件命名
 
-以功能划分为主，业务逻辑隔离，好维护和扩展
+以功能划分为主，业务逻辑隔离，好维护和扩展。其中文件命名规范：组件的目录或者文件名为 `PascalCase`，其他目录及文件用中划线。
 
 ```bash
 /src
@@ -81,9 +81,31 @@ app.js root components, index.js traditional and actual entry file.
 
 ### 2.1 引入 scss
 
-安装 `node-sass` 就好了，重命名 `app.css` 为 `app.scss`，然后在 `app.scss` 中统一管理。
+安装 `node-sass` 就好了，重命名 `app.css` 为 `app.scss`，然后在 `app.scss` 中统一管理一级页面样式，一级页面的样式在一级页面的 `index.scss` 中管理。
 
 [Adding a Sass Stylesheet](https://facebook.github.io/create-react-app/docs/adding-a-sass-stylesheet)
+
+
+- `src/app.scss`
+
+```scss
+@import './pages/Home/index.scss'
+```
+
+- `src/pages/Home/index.scss`
+
+```scss
+#cityGuideHome {
+  border: 1px solid rebeccapurple;
+  button {
+    border: 2px solid red;
+  }
+}
+
+@import './components/Eat/index.scss';
+```
+
+> 多次 import 有性能问题？？
     
 ### 2.2 eslint + prettier 代码检查
 
@@ -392,4 +414,3 @@ export default Home;
 ```
 
 > 感觉没有必要引入 redux-logger 中间件，因为 redux-dev 已经很好用了。但异步用的 redux-chunk 还是有用的，暂时没有应用场景。
-
