--- a/04_Framework_and_Lib/1_react/08_learn_react/0000.最佳实践.md
+++ b/04_Framework_and_Lib/1_react/08_learn_react/0000.最佳实践.md
@@ -414,3 +414,107 @@ export default Home;
 ```
 
 > 感觉没有必要引入 redux-logger 中间件，因为 redux-dev 已经很好用了。但异步用的 redux-chunk 还是有用的，暂时没有应用场景。
+
+
+## 四 引入 react-router
+
+### 4.1 安装依赖
+
+```bash
+npm install --save react-router-dom
+```
+
+### 4.2 编写路由文件
+
+- `src/services/router.js`
+
+懒加载啦
+
+```js
+import React, { Suspense, lazy } from 'react';
+import {
+  HashRouter as Router,
+  Route,
+  Redirect,
+  Switch,
+} from 'react-router-dom';
+import { Loading } from '../components/Loading/index';
+
+const Home = lazy(() => import('../pages/Home/index'));
+const List = lazy(() => import('../pages/List/index'));
+
+const AppRouter = () => (
+  <Router>
+    <Suspense fallback={Loading}>
+      <div className="App">
+        <Route exact path="/" render={() => <Redirect to="/home" />} />
+        <Switch>
+          <Route path="/home" render={() => <Home />} />
+          <Route path="/list" render={() => <List />} />
+        </Switch>
+      </div>
+    </Suspense>
+  </Router>
+);
+
+export default AppRouter;
+```
+
+### 4.3 改造 app.js
+
+- before
+
+```js
+import React from 'react';
+import Home from './pages/Home/index';
+import List from './pages/List/index';
+import './App.scss';
+
+function App() {
+  return (
+    <div className="App">
+      <Home />
+      <List />
+    </div>
+  );
+}
+
+export default App;
+```
+
+- after
+
+```js
+import React from 'react';
+import AppRouter from './services/router';
+import './App.scss';
+
+function App() {
+  return (
+    <div className="App">
+      <AppRouter />
+    </div>
+  );
+}
+
+export default App;
+```
+
+### 4.4 页面跳转
+
+#### 4.4.1 `Link` 标签
+
+```js
+<Link to="/list">goToList</Link>
+```
+
+#### 4.4.2 函数式跳转
+
+- 返回 
+
+```js
+goBack = () => {
+  this.props.history.goBack()
+}
+```
+
