more with react native

--- a/04_Framework_and_Lib/1_react/08_learn_react/0000.最佳实践.md
+++ b/04_Framework_and_Lib/1_react/08_learn_react/0000.最佳实践.md
@@ -413,10 +413,14 @@ const Home = connect(
 export default Home;
 ```
 
-> 感觉没有必要引入 redux-logger 中间件，因为 redux-dev 已经很好用了。但异步用的 redux-chunk 还是有用的，暂时没有应用场景。
+### 3.3 中间件
+
+感觉没有必要引入 redux-logger 中间件，因为 redux-dev 已经很好用了。但异步用的 redux-chunk/redux-saga 还是有用的，暂时没有应用场景（redux-saga 提取异步逻辑，使组件更清晰易维护？）。
 
 
 ## 四 引入 react-router
+
+页面依赖的数据是放在路由中还是放在 props/state 中，可以这样判断：当前页面是否有可能通过外部连接跳转过来，如果是，可以把页面参数放到路由中，如果不是，简单非敏感且又含有语义的信息也可以放在路由中。
 
 ### 4.1 安装依赖
 
@@ -510,11 +514,30 @@ export default App;
 
 #### 4.4.2 函数式跳转
 
-- 返回 
+需要使用 [`withRouter`](https://reacttraining.com/react-router/web/api/withRouter) 包裹
 
 ```js
-goBack = () => {
-  this.props.history.goBack()
-}
+import { withRouter } from 'react-router-dom';
+
+// this integrate redux
+const List = withRouter(
+  connect(
+    mapStateToProps,
+    mapDispatchToProps
+  )(PureList)
+);
 ```
 
+- 跳转
+
+```js
+// go to some page
+this.props.history.push('/path')
+
+// go back
+this.props.history.goBack()
+```
+
+#### 4.4.3 嵌套路由
+
+这里先不写，如果业务需要可以自己集成。
