--- a/04_Framework_and_Lib/1_react/07.react 配置反向代理.md
+++ b/04_Framework_and_Lib/1_react/07.react 配置反向代理.md
@@ -1,6 +1,6 @@
 官网有介绍的：[Proxying API Requests in Development](https://facebook.github.io/create-react-app/docs/proxying-api-requests-in-development)
 
-需要注意的是在 `fetch` 中写的地址不能使用完整地址，只能是 api 的路径，比如：
+需要注意的是在 `fetch`（如果是 axios 就不写 baseURL） 中写的地址不能使用完整地址，只能是 api 的路径，比如：
 
 ```js
 import React, { Component } from 'react';
@@ -30,6 +30,25 @@ export default App;
 > 相对路径这里吃了大亏
 
 其他是在 package.json 中写 proxy 还是新建 `setupProxy.js`（可配置项更多就看自己需求啦） ，文档写的很清楚。
+
+- `package.json` 
+
+```js
+"proxy": "http://ip.taobao.com"
+```
+
+- `setupProxy.js`
+
+```js
+const proxy = require('http-proxy-middleware');
+
+module.exports = function(app) {
+  app.use(proxy('/v2/', {
+    target: 'https://staging.handy.travel/',
+    "changeOrigin": true,
+  }));
+};
+```
 
 另外，通常我们会封装 fetch or axios，要区分 dev 还是 prod 来配置不同的 host（dev 为空，使用反向代理，不需要配置 host；prod 就使用生产环境的地址）。在 react app 中可以直接访问 node 的 `process` 变量，进而通过 `process.env.NODE_ENV` 来区分环境。
 
