--- a/04_Framework_and_Lib/1_react/00_react_native/19.初始化的redux store中的state被覆盖了.md
+++ b/04_Framework_and_Lib/1_react/00_react_native/19.初始化的redux store中的state被覆盖了.md
@@ -85,6 +85,15 @@ function reducer(state = initialState, action) {
 }
 ```
 
+或者使用 es6 的 `...` 
+
+```js
+return {
+  ...state,
+  homeEatInfo: action.homeEatInfo,
+};
+```
+
 还是看[官方文档](http://cn.redux.js.org/)（[英文在这里](https://redux.js.org/)）搞定的，需要通读一遍，不然真是摸瞎了。   
 
 其他参考资料：[Redux 入门教程（一）：基本用法](http://www.ruanyifeng.com/blog/2016/09/redux_tutorial_part_one_basic_usages.html)   
