--- a/04_Framework_and_Lib/1_react/08_learn_react/09.antd覆盖样式.md
+++ b/04_Framework_and_Lib/1_react/08_learn_react/09.antd覆盖样式.md
@@ -1,7 +1,7 @@
 ```js
 <CheckboxGroup
   options={plainFilterTags}
-  value={this.state.filterTagsCheckedList}
+  value={this.state.checkedTagList}
   onChange={this.onChange}
   className="filter-tags-check-box-group"
 />
