--- a/04_Framework_and_Lib/1_react/20.react key.md
+++ b/04_Framework_and_Lib/1_react/20.react key.md
@@ -1,7 +1,7 @@
 使用生成唯一 id 的函数
 
 ```js
-function genID(length = 12) {
+function genUniqueStr(length = 12) {
   return Number(
     Math.random()
       .toString()
