--- a/12_Computer_Basis/04_DB/mySQL/03.安装、使用及卸载mySQL.md
+++ b/12_Computer_Basis/04_DB/mySQL/03.安装、使用及卸载mySQL.md
@@ -8,8 +8,8 @@
 
 > 参数和值之间一般不带空格，新版可以，另外，这里使用绝对路径方式启动 mysql，可以设置环境变量
 
-3）显示数据库：`show databases;` 注意加分号，第一次一般要求重置密码
-4）重置密码：`ALTER USER 'root'@'localhost' IDENTIFIED BY 'ZAQ1xsw2'` 这里是开发环境，直接设置为空字符串
+3）显示数据库：`show databases;` 注意加分号，第一次一般要求重设密码
+4）重设密码：`ALTER USER 'root'@'localhost' IDENTIFIED BY 'ZAQ1xsw2'` 这里是开发环境，直接设置为空字符串
 
 > 开发环境绝对不能这样，另外，也可以用这条命令重设密码，自己不知道之前设置为空，结果卸载重装。。。
 
