--- a/01_JavaScript/1_method/45.数组中对象元素按中文字母排序.md
+++ b/01_JavaScript/1_method/45.数组中对象元素按中文字母排序.md
@@ -33,3 +33,36 @@ function compare(property) {
 
 var b = a.sort(compare('zh'));
 ```
+
+```js
+var b = [
+    {
+        "id":null,
+        "type":1,
+        "name":null,
+        "asCover":false
+    },
+        {
+        "id":null,
+        "type":1,
+        "name":null,
+        "asCover":true
+    },
+    {
+        "id":null,
+        "type":1,
+        "name":null,
+        "asCover":false
+    }
+]
+
+function compare(property) {
+  return function(obj1, obj2) {
+    const value1 = obj1[property];
+    const value2 = obj2[property];
+    return value2 - value1; // 升序
+  };
+}
+
+var c = b.sort(compare('asCover'));
+```
