--- a/04_Framework_and_Lib/7_typescript/01.基本概念.md
+++ b/04_Framework_and_Lib/7_typescript/01.基本概念.md
@@ -1,1 +1,8 @@
 1. interface: 我的理解中TS中的接口就是描述一个对象中应该有那些属性，这些属性对应值得类型，有哪些方法，这些方法的参数和返回值等信息。
+2. class 使用前先声明，并说明 private public protected
+
+Private members are only accessible within their declaring class.
+Protected members are only accessible within their declaring class and classes derived from it.
+Public members can be accessed anywhere.
+
+from： https://www.stevefenton.co.uk/2014/09/typescript-protected-access-modifier/
