--- a/07_Git/01.git常用命令.md
+++ b/07_Git/01.git常用命令.md
@@ -118,3 +118,10 @@ git push origin --delete <branchName>
 
 > 远程分支可以存在缓存，通过 `git remote prune origin` or `git fetch -p` 清楚
 
+## 修改远程分支url
+
+修改 git 远程分支
+
+```bash
+git remote set-url origin <url>
+```
