front-end base and bind function

--- a/01_JavaScript/5_study/02_高程练习题/第6章 面向对象的程序设计/6.2 创建对象.md
+++ b/01_JavaScript/5_study/02_高程练习题/第6章 面向对象的程序设计/6.2 创建对象.md
@@ -93,7 +93,7 @@ console.log(Object.getPrototypeOf(p1)); // {age: 20}
 
 下图直观的反映了 Person，p1，p2，以及 p1、p2 原型对象之间的指向关系：
 
-![重写原型对象](http://ol9ge41ud.bkt.clouddn.com/rewrite_prototype.png)
+![重写原型对象](https://raw.githubusercontent.com/xiaogliu/pic-lib/master/old/rewrite_prototype.png)
 
 ## 问题 6
 
