--- a/04_Framework_and_Lib/1_react/00_react_native/16.[总结]redux在react_native中的使用.md
+++ b/04_Framework_and_Lib/1_react/00_react_native/16.[总结]redux在react_native中的使用.md
@@ -2,7 +2,7 @@
 
 Redux 工作流程见下图：   
 
-![Redux工作流](http://ol9ge41ud.bkt.clouddn.com/redux.jpg)    
+![Redux工作流](https://raw.githubusercontent.com/xiaogliu/pic-lib/master/old/redux.jpg)    
 
 简单来说就是：   
 
