--- a/04_Framework_and_Lib/1_react/00_react_native/58.react-native常用第三方库及可能遇到的坑.md
+++ b/04_Framework_and_Lib/1_react/00_react_native/58.react-native常用第三方库及可能遇到的坑.md
@@ -8,6 +8,6 @@ apparently `react-native link` adds all targets to the `ios` target even if they
 
 就是在 Xcode 中将 `Linked Frameworks and Libraries` 中 `...-tvOS.a` 文件删掉，如下图所示：
 
-![delete_tvOS](http://ol9ge41ud.bkt.clouddn.com/delete_tvOS.png)
+![delete_tvOS](https://raw.githubusercontent.com/xiaogliu/pic-lib/master/old/delete_tvOS.png)
 
 参考自：[library not found for -lRNVectorIcons-tvOS](https://github.com/oblador/react-native-vector-icons/issues/461)
