--- a/09_Utilties/10_云部署.md/07.腾讯云部署(centOS).md
+++ b/09_Utilties/10_云部署.md/07.腾讯云部署(centOS).md
@@ -23,15 +23,24 @@ ssh root@< 主机公网 ip >
 
 > centOS 默认 `～/` 为 `root` 目录
 
+重启命令：
+
+```bash
+reboot
+shutdown -r now # 立刻重启(root用户使用)
+shutdown -r 10 # 过10分钟自动重启(root用户使用)
+shutdown -r 20:35 # 在时间为20:35时候重启(root用户使用)
+```
+
 ### 登录后安装 node，mongodb，git
 
 1.  安装 node
 
-这里安装 8.x 版本的 node：
+这里安装 12.x 版本的 node：
 
 ```bash
 # 配置 rpm 仓库
-curl --silent --location https://rpm.nodesource.com/setup_8.x | sudo bash -
+curl --silent --location https://rpm.nodesource.com/setup_12.x | sudo bash -
 
 # 安装 Node.js
 sudo yum -y install nodejs
@@ -40,7 +49,7 @@ sudo yum -y install nodejs
 node -v
 ```
 
-> centOS 使用 yum 进行包管理
+> centOS 使用 yum 进行包管理。更多 node 版本[参考这里](https://github.com/nodesource/distributions)：
 
 2.  安装 mongodb
 
@@ -142,11 +151,46 @@ chsh -s /bin/zsh
 
 6.2）安装 oh-my-zsh
 
+需要先安装 git
+
 ```bash
 wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | sh
 ```
 
+使用的 plugin `git z zsh-syntax-highlighting sudo`，使用的主题 `avit`
+
+6.3) 插件
+
+- zsh-syntax-highlighting
+
+```bash
+git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
+```
+
+- sudo
+
+
 更多配置参考这个：[树莓派提高shell逼格oh-my-zsh](https://www.jianshu.com/p/8b824bbdd471)
+
+7）安装 nginx
+
+```bash
+sudo yum install epel-release
+
+sudo yum install nginx
+
+sudo systemctl start nginx
+```
+
+如果开启了防火墙：
+
+```bash
+sudo firewall-cmd --permanent --zone=public --add-service=http 
+sudo firewall-cmd --permanent --zone=public --add-service=https
+sudo firewall-cmd --reload
+```
+
+访问 `http://server_domain_name_or_IP/`
 
 ## 参考资料
 
