--- a/11_other/05_待总结blog/前端基础整理.md
+++ b/11_other/05_待总结blog/前端基础整理.md
@@ -183,5 +183,13 @@ I think Webpack is a superior tool strictly for bundling web apps, since it give
 
 Basically I like to use Webpack as the primary build tool but have it driven by gulp or npm scripts depending on how complicated OTHER aspects of building/deploying the project are. Gulp is very nice to use compared to Grunt or writing shell scripts, and there are times when it is necessary, but IMO it isn't as good as Webpack for just putting your code together.
 
+## React 
 
+- 前置知识
+
+声明式编程/函数式编程（不可变，纯函数，高阶函数）；react 是对函数式编程的很好的实践（通过框架能学到编程思想），redux 不可变，组建纯函数，高阶组件利用高阶函数进行封装。
+
+函数式编程好处：声明式编程相比过程式编程代码量更少；也更接近自然语言所以更容易理解；纯函数及数据不可变性便于测试、debug 以及复用；纯函数也更易维护甚至重构，甚至实现[热更新系统](http://www.ruanyifeng.com/blog/2012/04/functional_programming.html)。
+
+函数式编程才会使得[组件开发](https://zhuanlan.zhihu.com/p/28431744)实现其价值（不然，组件有副作用那后续维护简直坑爹）
 
