--- a/06_Security/05.https建立过程.md
+++ b/06_Security/05.https建立过程.md
@@ -1,13 +1,13 @@
-简单来说：就是通过 RSA 算法交换将来通信过程中加密报文所需的对称秘钥（DES，3DES等）。
+简单来说：就是通过 RSA（非对称算法） 算法交换将来通信过程中加密报文所需的对称秘钥（DES，3DES等）。
 
 具体：
 
 ## 验证 server
 
-需要 CA，保证响应中的证书确实是我们想请求的服务器返回来的，没有被中间人劫持，过程：
+需要 CA，保证响应中的证书确实是我们想请求的服务器返回来的（主要是拿到 server 的公钥），没有被中间人劫持，或者搞比萨恶作剧，过程：
 
 1. TCP 三次握手建立后，服务器（记为 S1）发自己的证书给客户端；
-2. 客户端通过 CA 发给 S1 的证书中指明的散列算法，对 S1 的证书进行散列计算，得到散列值 H
+2. 客户端通过 CA 发给 S1 的证书中指明的散列算法，对 S1 的证书进行散列计算（提取散列值，其实是摘要），得到散列值 H
 3. 客户端通过应用 CA 的公钥，对 CA 发给 S1 的证书上的签名解密，得到散列值 H'（因为 CA 在给 S1 签发证书的时候，签名是通过 RSA 算法对 S1 证书的摘要做的加密）
 4. 如果 H = H'，所以，S1 是可信赖的
 
@@ -24,3 +24,14 @@
 2）Mc：客户端 -》 客户端，报文认证码的 认证秘钥 MAC（Message Authentication Code，报文认证码）
 2）Ks：服务端 -》 服务端，报文加密秘钥
 2）Ms：服务端 -》 服务端，报文认证码的 认证秘钥
+
+参考：
+[浅谈Charles抓取HTTPS原理](https://www.jianshu.com/p/405f9d76f8c4)   
+[网络安全——一图看懂HTTPS建立过程](https://www.jianshu.com/p/2a18578e3610)
+
+大致过程：浏览器从服务器拿到证书。证书上有服务器的公钥和CA机构打上的数字签名。拿到证书后验证其数字签名。具体就是，根据证书上写的CA签发机构，在浏览器内置的根证书里找到对应的公钥，用此公钥解开数字签名，得到摘要（digest,证书内容的hash值），据此验证证书的合法性。多说两句https接下来的加密过程：验证完合法性后，在证书里取出服务器的公钥。浏览器生成对称密钥。使用服务器公钥对该对称密钥加密，发回给服务器。服务器使用私钥解密，得到对称密钥。服务器使用该对称密钥加密后续http数据。使用对称密钥加密是因为比非对称加密高效。
+
+作者：jianyong li
+链接：https://www.zhihu.com/question/37370216/answer/337563113
+来源：知乎
+著作权归作者所有。商业转载请联系作者获得授权，非商业转载请注明出处。
