understand this again

--- a/01_JavaScript/1_method/26.理解词法作用域.md
+++ b/01_JavaScript/1_method/26.理解词法作用域.md
@@ -28,19 +28,135 @@ function bar() {
 bar();
 ```
 
-code1输出是2，code2输出3。
+code1 输出是 2，code2 输出 3。
 
-分析：   
+分析：
 
-关于词法作用域和静态作用域，经典总结：  
+关于词法作用域和静态作用域，经典总结：
 
 - 词法作用域的函数中遇到既不是形参也不是函数内部定义的局部变量的变量时，去函数定义时的环境中（它的词法作用域）查询。(这也是闭包工作的原理)
 - 动态域的函数中遇到既不是形参也不是函数内部定义的局部变量的变量时，到函数调用时的环境中查。
 
-js的作用域是基于静态作用域的。   
+js 的作用域是基于静态作用域的。
 
-code1中调用 `foo` 时，因为 `console.log(a)` 中的 `a` 即不是函数 `foo` 的形参，也不是在 `foo` 中定义的局部变量，这时，便去 `foo` 被定义的环境中查询，因为 `foo` 此时是在全局环境中定义的，所以找到了全局变量 `a` ，且其值为 `2`。   
+code1 中调用 `foo` 时，因为 `console.log(a)` 中的 `a` 即不是函数 `foo` 的形参，也不是在 `foo` 中定义的局部变量，这时，便去 `foo` 被定义的环境中查询，因为 `foo` 此时是在全局环境中定义的，所以找到了全局变量 `a` ，且其值为 `2`。
 
-code2中调用的 `foo` 是在函数 `bar` 中定义的，所以找到了在函数 `bar` 中定义的局部变量 `a`，其值为 `3`。
+code2 中调用的 `foo` 是在函数 `bar` 中定义的，所以找到了在函数 `bar` 中定义的局部变量 `a`，其值为 `3`。
 
-> 词法作用域进一步引申出闭包。实际上，不管code1还是code2中 foo 都起了闭包的作用：保持了对其词法作用域的引用。
+> 词法作用域进一步引申出闭包。实际上，不管 code1 还是 code2 中 foo 都起了闭包的作用：保持了对其词法作用域的引用。
+
+作用域再理解：作用域是由变量对象构成，他的作用是定义了一套查询标识符的值的规则。作用域在代码编译阶段（上下文创建阶段）就确定了，所以称之为此法作用域，对应的有动态作用域。不过注意一点，this 比较特殊，它是在代码执行阶段确定的。
+
+> 上下文就是代码执行环境包括词法作用域（由变量对象构成，用于确定标识符查询规则）和 this（执行阶段动态确定，但执行时，this 一旦确定就不能改变）。上下文创建阶段：生成变量对象，建立作用域链，确定 this 指向。
+
+### 首先判断**小括号**左边的表达式是不是 `Reference` 类型
+
+#### 1）如果不是，则 this 为 undefined（非严格模式为全局对象）
+
+导致产生非 Reference 的典型场景是有求值操作 `GetValue`，求值完后就是具体值，而具体值不是 `Reference` 类型。
+
+比如 
+
+```js
+var obj = {
+  value: 1,
+  foo() {
+    console.log(this.value);
+  },
+};
+
+(obj.foo === obj.foo)()
+```
+
+小括号左边的表达式是 `(obj.foo === obj.foo)`，这个表达式最终结果是 Reference 类型吗？
+
+答：因为 `===` 有个 `GetValue` 过程，最终导致返回一个函数对象，这个函数对象是具体的值，不是 `Reference` 类型。
+
+所以 `this` 为 `undefined`
+
+#### 2）如果是 Reference 类型则判断其 base 类型。
+
+下面两种写法会产生 Reference 类型
+
+1）当处理一个标识符的时候（标识符其实就是变量名，函数名，函数参数名以及全局对象的未受限的属性。比如 `var a = 1`, `function bar() {}`，这里的 a, bar 都是 Reference 类型）
+2）或者进行属性访问的时候（比如 `obj.bar`）
+
+Reference 类型结构：
+
+```js
+var valueOfReferenceType = {
+  base: <base object>,
+  propertyName: <property name>
+};
+```
+
+## 然后判断 Reference base 类型
+
+简单理解：
+
+- Reference 的 `base` 的值是一个对象， 则 this 就指向这个对象；
+
+- 不然 this 指向 Environment Record（浏览器即 window）
+
+## 其他
+
+虽然：
+
+```js
+// demo1
+function foo() {
+  console.log(this);
+}
+
+foo()
+```
+
+和 
+
+```js
+// demo2
+var obj = {
+  foo() {
+    console.log(this);
+  },
+};
+
+(obj.foo === obj.foo)()
+```
+
+最终返回的 `this` 都是 `undefined`，但 js 引擎在背后计算的方法不一样，前者是因为 `ImplicitThisValue(EnvironmentRecord)` 返回 `undefined`，后者因为 `()` 左边不是 `Reference` 类型直接导致 `this` 为 `undefined`。
+
+
+<!-- function getTotal() {
+    let sum = 0;
+    let input = [1,4,2,3];
+    input.forEach(i=>{
+        sum+=1;
+    });
+    return sum;
+}
+
+1. This method is not flexible. In project, it's better if the method is general and can be re-used.
+2. Using function expression sometimes is better than the function declaration, especially in ES6 environment. In this way, we can avoid understanding confusion because of hositing.
+
+So, change the method of getTotal as follows:
+
+```js
+const getTotal = (input = []) => {
+  let sum = 0;
+
+  if (Array.isArray(input)) {
+    input.forEach(element => {
+      sum += element;
+    });
+    return sum;
+  } else {
+    console.error('Please input Array type');
+  }
+};
+
+getTotal([1,4,2,3]);
+``` -->
+
+
+
