--- a/11_other/05_待总结blog/前端基础整理.md
+++ b/11_other/05_待总结blog/前端基础整理.md
@@ -101,14 +101,108 @@ const throttle = (func, delay) => {
 
 ## bind 函数
 
+主要考虑参数传递、this 应用以及使用 apply。
+
+下面没有考虑到传参数
+
 ```js
 Function.prototype.myBind = function(ctx) {
   return function() {
     this.apply(ctx, [...arguments])
   }
 }
-
 ```
+
+```js
+Function.prototype.myBind = function(ctx) {
+  const target = this;
+  const bindArgs = Array.prototype.slice(arguments, 1);
+
+  return function () {
+    const callArgs = Array.prototype.slice(arguments);
+
+    target.apply(ctx, bindArgs.concat(callArgs))
+  }
+}
+```
+
+更完整的实现[看这里](https://juejin.im/post/5b3c3377f265da0f8f20131f)
+
+## 深复制
+
+```js
+function deepClone(source) {
+  // 这里没有判断 null
+  if (typeof source !== 'object') {
+    return source;
+  }
+
+  let target;
+
+  Object.keys(source).forEach(key => {
+    if (typeof source[key] !== 'object') {
+      // set target 属性时报错，因为初始是 undefined，不能在 undefined 上面设置属性
+      target.key = source[key]
+    } else {
+      target.key = deepClone(source[key]);
+    }
+  })
+
+  return target;
+}
+```
+
+更改版：
+
+```js
+function deepClone(source) {
+  if (typeof source !== 'object' || !source) return source;
+
+  let target = Array.isArray(source) ? [] : {}
+
+  Object.keys(source).forEach(key => {
+    if (source[key] !== 'object' || !source[key]) {
+      target[key] = source[key];
+    } else {
+      target[key] = deepClone(source[key]);
+    }
+  })
+
+  return target;
+}
+
+var o1 = {
+  arr: [1,2,3],
+  obj: {
+    a: 111,
+  },
+  a: 1,
+  reg: /test/,
+  fn1: function() {
+    return this.a;
+  },
+}
+
+var o2 = deepClone(o1);
+```
+
+## 实现 promise
+
+一步步来：
+
+```js
+var p = new MyPromise((resolve, reject) => {
+  resolve('hi')
+})
+```
+
+### 先实现构造函数
+
+```js
+var 
+```
+
+
 ## 常见排序，搜索算法
 
 ## 常见设计模式
