react multi  lang

--- a/04_Framework_and_Lib/1_react/09.react 国际化and多语言.md
+++ b/04_Framework_and_Lib/1_react/09.react 国际化and多语言.md
@@ -1,12 +1,98 @@
-使用 react-intl，参考这篇文章：[在 React 项目中使用 React-intl 实现多语言支持](https://segmentfault.com/a/1190000005824920#articleHeader7)
+## 使用 react-intl
+
+参考这篇文章：[在 React 项目中使用 React-intl 实现多语言支持](https://segmentfault.com/a/1190000005824920#articleHeader7)
 
 1. `FormattedDate` 不显示年：显式配置参数，然后年不配置就 OK
 
 ```js
 <FormattedDate
-    value={new Date().getTime()}
-    month='long'
-    day='numeric'
-    weekday='long'
+  value={new Date().getTime()}
+  month="long"
+  day="numeric"
+  weekday="long"
 />
 ```
+
+## 使用 i18next react
+
+感觉更好，参考他们的[文档](https://react.i18next.com/)。几点注意：
+
+### 配置文件
+
+```js
+// i18n.config.js
+export default {
+  // preset
+  lng: "ja_JP",
+  fallbackLng: "ja_JP",
+  interpolation: {
+    escapeValue: false // not needed for react!!
+  }
+};
+```
+
+```js
+import i18n from "i18next";
+import { initReactI18next } from "react-i18next";
+import config from "./i18n.config";
+
+import en_US from "../../assets/language/en_US.json";
+import ja_JP from "../../assets/language/ja_JP.json";
+import zh_CN from "../../assets/language/zh_CN.json";
+import zh_HK from "../../assets/language/zh_HK.json";
+
+const options = {
+  ...config,
+  // debug: true,
+  resources: {
+    en_US: { translation: en_US },
+    ja_JP: { translation: ja_JP },
+    zh_CN: { translation: zh_CN },
+    zh_HK: { translation: zh_HK }
+  }
+};
+
+i18n
+  // pass the i18n instance to react-i18next.
+  .use(initReactI18next)
+  // init i18next
+  // for all options read: https://www.i18next.com/overview/configuration-options
+  .init(options);
+
+export default i18n;
+```
+
+除了上面配置，如果在 web 端，可以引入自动检测语言机制，不会检测浏览器，直接指定了默认语言。
+
+### 翻译的文字包含 html 标签
+
+- 使用 `dangerouslySetInnerHTML`
+
+```js
+<div
+  className={styles.remark}
+  dangerouslySetInnerHTML={{
+    __html: t(`Please input the reset password Code which received`)
+  }}
+/>
+```
+
+不是很推荐，因为不够优雅。。
+
+- 使用 `Trans` 组件
+
+翻译文件：
+
+```json
+"For Tourist": "For <1 /> Tourist"
+```
+
+使用：
+
+```js
+<Trans i18nKey="For Tourist">
+  For <br /> Tourist
+</Trans>
+```
+
+就是在翻译文件中写上占位符。
