station translation ok

--- a/04_Framework_and_Lib/1_react/09.react 国际化and多语言.md
+++ b/04_Framework_and_Lib/1_react/09.react 国际化and多语言.md
@@ -95,4 +95,16 @@ export default i18n;
 </Trans>
 ```
 
-就是在翻译文件中写上占位符。
+就是在翻译文件中写上占位符。其中 `Trans` 组件可设置包裹它的元素：
+
+```js
+<Trans i18nKey="For Tourist" parent="p">
+  For <br /> Tourist
+</Trans>
+```
+
+也可以在全局设置，[参考这里](https://react.i18next.com/latest/trans-component#additional-options-on-i-18-next-init)。
+
+- 关于 key
+
+不能以 `:` 结尾，不然渲染不出来。
