--- a/11_other/05_待总结blog/前端基础整理.md
+++ b/11_other/05_待总结blog/前端基础整理.md
@@ -15,12 +15,12 @@ function debounce(func, delay) {
     const context = this;
     const args = [...arguments];
 
-    clearTimeout(timeID)
+    clearTimeout(timeID);
 
     timeID = setTimeout(() => {
       func.apply(context, args);
-    }, delay)
-  }
+    }, delay);
+  };
 }
 ```
 
@@ -37,9 +37,9 @@ const debounce = (func, delay) => {
 
     timeID = setTimeout(() => {
       func.apply(context, args);
-    }, delay)
-  }
-}
+    }, delay);
+  };
+};
 ```
 
 ### 简单截流（throttle）
@@ -57,11 +57,12 @@ function throttle(func, delay) {
         // function 也可以拿到 setTimeout 外面，看是否立即执行
         func.apply(this, args);
         wait = false;
-      }, delay)
+      }, delay);
     }
-  }
+  };
 }
 ```
+
 上面的写法有问题，如果是多个函数需要使用 throttle 进行处理，他们会共同访问 `wait`，会出现混乱。使用时间戳比较好
 
 ```js
@@ -77,7 +78,7 @@ function throttle(fn, delay) {
       fn.apply(ctx, args);
       prev = Date.now();
     }
-  }
+  };
 }
 ```
 
@@ -95,8 +96,8 @@ const throttle = (func, delay) => {
       // 执行完一次重新赋值 prev
       prev = Date.now();
     }
-  }
-}
+  };
+};
 ```
 
 ## bind 函数
@@ -108,9 +109,9 @@ const throttle = (func, delay) => {
 ```js
 Function.prototype.myBind = function(ctx) {
   return function() {
-    this.apply(ctx, [...arguments])
-  }
-}
+    this.apply(ctx, [...arguments]);
+  };
+};
 ```
 
 ```js
@@ -118,12 +119,12 @@ Function.prototype.myBind = function(ctx) {
   const target = this;
   const bindArgs = Array.prototype.slice(arguments, 1);
 
-  return function () {
+  return function() {
     const callArgs = Array.prototype.slice(arguments);
 
-    target.apply(ctx, bindArgs.concat(callArgs))
-  }
-}
+    target.apply(ctx, bindArgs.concat(callArgs));
+  };
+};
 ```
 
 更完整的实现[看这里](https://juejin.im/post/5b3c3377f265da0f8f20131f)
@@ -133,20 +134,20 @@ Function.prototype.myBind = function(ctx) {
 ```js
 function deepClone(source) {
   // 这里没有判断 null
-  if (typeof source !== 'object') {
+  if (typeof source !== "object") {
     return source;
   }
 
   let target;
 
   Object.keys(source).forEach(key => {
-    if (typeof source[key] !== 'object') {
+    if (typeof source[key] !== "object") {
       // set target 属性时报错，因为初始是 undefined，不能在 undefined 上面设置属性
-      target.key = source[key]
+      target.key = source[key];
     } else {
       target.key = deepClone(source[key]);
     }
-  })
+  });
 
   return target;
 }
@@ -156,32 +157,32 @@ function deepClone(source) {
 
 ```js
 function deepClone(source) {
-  if (typeof source !== 'object' || !source) return source;
+  if (typeof source !== "object" || !source) return source;
 
-  let target = Array.isArray(source) ? [] : {}
+  let target = Array.isArray(source) ? [] : {};
 
   Object.keys(source).forEach(key => {
-    if (source[key] !== 'object' || !source[key]) {
+    if (source[key] !== "object" || !source[key]) {
       target[key] = source[key];
     } else {
       target[key] = deepClone(source[key]);
     }
-  })
+  });
 
   return target;
 }
 
 var o1 = {
-  arr: [1,2,3],
+  arr: [1, 2, 3],
   obj: {
-    a: 111,
+    a: 111
   },
   a: 1,
   reg: /test/,
   fn1: function() {
     return this.a;
-  },
-}
+  }
+};
 
 var o2 = deepClone(o1);
 ```
@@ -192,22 +193,21 @@ var o2 = deepClone(o1);
 
 ```js
 var p = new MyPromise((resolve, reject) => {
-  resolve('hi')
-})
+  resolve("hi");
+});
 ```
 
 ### 先实现构造函数
 
 ```js
-var 
+var
 ```
-
 
 ## 常见排序，搜索算法
 
 ## 常见设计模式
 
-## 取消请求（自己封装fetch）及应用
+## 取消请求（自己封装 fetch）及应用
 
 ## 获取页面宽高，距离顶部高度等
 
@@ -285,7 +285,7 @@ I think Webpack is a superior tool strictly for bundling web apps, since it give
 
 Basically I like to use Webpack as the primary build tool but have it driven by gulp or npm scripts depending on how complicated OTHER aspects of building/deploying the project are. Gulp is very nice to use compared to Grunt or writing shell scripts, and there are times when it is necessary, but IMO it isn't as good as Webpack for just putting your code together.
 
-## React 
+## React
 
 - 前置知识
 
@@ -295,3 +295,100 @@ Basically I like to use Webpack as the primary build tool but have it driven by 
 
 函数式编程才会使得[组件开发](https://zhuanlan.zhihu.com/p/28431744)实现其价值（不然，组件有副作用那后续维护简直坑爹）
 
+## 手写 ajax 及 pormise 应用
+
+不考虑兼容性
+
+```js
+var sendRequest = (method, url) => {
+  let xhr = new XMLHttpRequest();
+
+  return new Promise((resolve, reject) => {
+    xhr.onreadystatechange = () => {
+      if (xhr.readyState === 4) {
+        if ((xhr.status >= 200 && xhr.status < 300) || xhr.status === 304) {
+          resolve(JSON.parse(xhr.responseText));
+        } else {
+          reject("Something wrong!");
+        }
+      }
+    };
+
+    xhr.open(method, url);
+    xhr.send(null);
+  });
+};
+
+(async () => {
+  let data = await sendRequest("get", "http://geohey.com/s/public_data/111");
+  console.log(data);
+
+  let data2 = await sendRequest(
+    "get",
+    `http://geohey.com/s/public_data/${data.code}`
+  );
+  console.log(data2)
+})();
+
+function ajax(options) {
+  let url = options.url;
+  const method = options.method.toLocaleLowerCase() || "get";
+  const async = options.async != false; // default is true
+  const data = options.data;
+  const xhr = new XMLHttpRequest();
+
+  if (options.timeout && options.timeout > 0) {
+    xhr.timeout = options.timeout;
+  }
+
+  return new Promise((resolve, reject) => {
+    xhr.ontimeout = () => reject && reject("请求超时");
+    xhr.onreadystatechange = () => {
+      if (xhr.readyState == 4) {
+        if ((xhr.status >= 200 && xhr.status < 300) || xhr.status == 304) {
+          resolve && resolve(xhr.responseText);
+        } else {
+          reject && reject();
+        }
+      }
+    };
+    xhr.onerror = err => reject && reject(err);
+
+    let paramArr = [];
+    let encodeData;
+    if (data instanceof Object) {
+      for (let key in data) {
+        // 参数拼接需要通过 encodeURIComponent 进行编码
+        paramArr.push(
+          encodeURIComponent(key) + "=" + encodeURIComponent(data[key])
+        );
+      }
+      encodeData = paramArr.join("&");
+    }
+
+    if (method === "get") {
+      // 检测 url 中是否已存在 ? 及其位置
+      const index = url.indexOf("?");
+      if (index === -1) url += "?";
+      else if (index !== url.length - 1) url += "&";
+      // 拼接 url
+      url += encodeData;
+    }
+
+    xhr.open(method, url, async);
+    if (method === "get") xhr.send(null);
+    else {
+      // post 方式需要设置请求头
+      xhr.setRequestHeader(
+        "Content-Type",
+        "application/x-www-form-urlencoded;charset=UTF-8"
+      );
+      xhr.send(encodeData);
+    }
+  });
+}
+```
+
+## html 相关
+
+form 表单，包括各种 input type
