--- a/11_other/04_Interview/18.bind实现.md
+++ b/11_other/04_Interview/18.bind实现.md
@@ -33,16 +33,18 @@ console.log(bar());
 
 ```js
 Function.prototype.myBind = function(ctx) {
-  const target = this;
-  const bindArgs = Array.prototype.slice.call(arguments, 1);
+  // 考察了对于 this 的理解，这里就是调用 myBind 方法的函数，也就是说，this 可以指向函数的啊！
+  const _this = this;
+  
+  // 这里第一个参数是 ctx，不要啊！！
+  const outArgs = Array.prototype.slice.call(arguments, 1);
 
   return function() {
-    const callArgs = Array.prototype.slice.call(arguments);
+    const innerArgs = Array.prototype.slice.call(arguments);
 
-    target.apply(ctx, bindArgs.concat(callArgs))
+    _this.apply(ctx, outArgs.concat(innerArgs))
   }
 }
-
 ```
 
 更完善的[参考这里](https://juejin.im/post/5b3c3377f265da0f8f20131f)
