--- a/04_Framework_and_Lib/1_react/09.react 国际化and多语言.md
+++ b/04_Framework_and_Lib/1_react/09.react 国际化and多语言.md
@@ -39,7 +39,7 @@ import config from "./i18n.config";
 import en_US from "../../assets/language/en_US.json";
 import ja_JP from "../../assets/language/ja_JP.json";
 import zh_CN from "../../assets/language/zh_CN.json";
-import zh_HK from "../../assets/language/zh_HK.json";
+import zh_TW from "../../assets/language/zh_TW.json";
 
 const options = {
   ...config,
@@ -48,7 +48,7 @@ const options = {
     en_US: { translation: en_US },
     ja_JP: { translation: ja_JP },
     zh_CN: { translation: zh_CN },
-    zh_HK: { translation: zh_HK }
+    zh_TW: { translation: zh_TW }
   }
 };
 
