--- a/04_Framework_and_Lib/1_react/24.dva使用.md
+++ b/04_Framework_and_Lib/1_react/24.dva使用.md
@@ -39,3 +39,11 @@ subscriptions: {
   }
 }
 ```
+
+## 添加 hash
+
+dva 默认在 `public` 文件夹下 `index.html` 中写死了引入了 css 和 js，不管是添加 hash 合适组件懒加载分割，都不友好。
+
+https://www.asni.cn/2433
+
+## 组件代码分割。
