make Git “forget” about a file that was tracked but is now in .gitignore

--- a/04_Framework_and_Lib/1_react/27.typescript.md
+++ b/04_Framework_and_Lib/1_react/27.typescript.md
@@ -1,3 +1,68 @@
-1. 类型：
+## 类型
 
+类型有 `boolean`, `number`, `string`, `number[]` or `Array<number>`, `[string, number]`, `any`, `void`, `undefined`, `null`, `object`
 
+其中
+
+- typescript 有个思想就是提前定义好数组内的元素及类型（不能动态改变，java 就这样？），所以，`number[]` 表示是数组类型，且元素全为 `number`，如果不是同一类型，称之为 `Tuple`，比如 `[string, number]`，当然，可以使用 `any[]`，但不推荐。
+- `object` 很少用，常见场景是表示像 `Object.create` 这样的 API，比如 `declare function create(o: object | null): void;`
+
+## 接口 (interface)
+
+类型检查的抽象写法。函数也可以写 interface，但注意，分号
+
+## 函数
+
+可以对其参数和返回值做约束
+
+## 泛型
+
+泛型（Generics）是指在定义函数、接口或类的时候，不预先指定具体的类型，而在使用的时候再指定类型的一种特性。
+
+首先，我们来实现一个函数 createArray，它可以创建一个指定长度的数组，同时将每一项都填充一个默认值：
+
+```js
+function createArray(length: number, value: any): Array<any> {
+  let result = [];
+  for (let i = 0; i < length; i++) {
+    result[i] = value;
+  }
+  return result;
+}
+
+createArray(3, "x"); // ['x', 'x', 'x']
+```
+
+上例中，我们使用了之前提到过的数组泛型来定义返回值的类型。
+这段代码编译不会报错，但是一个显而易见的缺陷是，它并没有准确的定义返回值的类型：
+Array<any> 允许数组的每一项都为任意类型。但是我们预期的是，数组中每一项都应该是输入的 value 的类型。
+这时候，泛型就派上用场了：
+
+```js
+function createArray<T>(length: number, value: T): Array<T> {
+  let result: T[] = [];
+  for (let i = 0; i < length; i++) {
+    result[i] = value;
+  }
+  return result;
+}
+
+createArray < string > (3, "x"); // ['x', 'x', 'x']
+```
+
+上例中，我们在函数名后添加了 <T>，其中 T 用来指代任意输入的类型，在后面的输入 value: T 和输出 Array<T> 中即可使用了。
+接着在调用的时候，可以指定它具体的类型为 string。当然，也可以不手动指定，而让类型推论自动推算出来：
+
+```js
+function createArray<T>(length: number, value: T): Array<T> {
+  let result: T[] = [];
+  for (let i = 0; i < length; i++) {
+    result[i] = value;
+  }
+  return result;
+}
+
+createArray(3, "x"); // ['x', 'x', 'x']
+```
+
+参考：https://ts.xcatliu.com/advanced/generics
