--- a/07_Git/01.git常用命令.md
+++ b/07_Git/01.git常用命令.md
@@ -125,3 +125,12 @@ git push origin --delete <branchName>
 ```bash
 git remote set-url origin <url>
 ```
+
+## 把已经 track 但写在 .gitignore 中的文件从 git 中删除
+
+```bash
+git rm --cached <file>
+git rm -r --cached <folder>
+```
+
+from [How to make Git “forget” about a file that was tracked but is now in .gitignore?](https://stackoverflow.com/questions/1274057/how-to-make-git-forget-about-a-file-that-was-tracked-but-is-now-in-gitignore)
