antd get value and label of select

--- a/04_Framework_and_Lib/1_react/26.antdesign相关.md
+++ b/04_Framework_and_Lib/1_react/26.antdesign相关.md
@@ -17,3 +17,26 @@
 
 1. 引入的 antd 组件类名没有被 CSS Modules 转化，所以被覆盖的类名 `.ant-select-selection` 必须放到 `:global` 中。
 2. 因为上一条的关系，覆盖是全局性的。为了防止对其他组件造成影响，所以需要包裹额外的 `className` 限制样式的生效范围。
+
+## 获取 select 中的 value 和 name
+
+使用 `labelInValue`， 注意，如果这样，`defaultValue` 也要是对象的形式：
+
+```js
+<Select
+  placeholder="请选择"
+  defaultValue={{
+    key: renovate.projects[0].id,
+    label: renovate.projects[0].name
+  }}
+  onChange={this.changeProjectSelect}
+  labelInValue
+>
+  {Array.isArray(renovate.projects) &&
+    renovate.projects.map(project => (
+      <Option value={project.id} key={project.id}>
+        {project.name}
+      </Option>
+    ))}
+</Select>
+```
