--- a/04_Framework_and_Lib/1_react/27.typescript.md
+++ b/04_Framework_and_Lib/1_react/27.typescript.md
@@ -7,6 +7,22 @@
 - typescript 有个思想就是提前定义好数组内的元素及类型（不能动态改变，java 就这样？），所以，`number[]` 表示是数组类型，且元素全为 `number`，如果不是同一类型，称之为 `Tuple`，比如 `[string, number]`，当然，可以使用 `any[]`，但不推荐。
 - `object` 很少用，常见场景是表示像 `Object.create` 这样的 API，比如 `declare function create(o: object | null): void;`
 
+还有枚举类型，也很好用，比如判断是否是编辑页面：
+
+```js
+enum Action {
+  Add,
+  View,
+  Edit,
+  Delete,
+}
+
+export default Action;
+
+// 如果不是 view 操作，可以编辑
+const isEditable = this.props.action !== ActionEnum.View;
+```
+
 ## 接口 (interface)
 
 类型检查的抽象写法。函数也可以写 interface，但注意，分号
