--- a/09_Utilties/10_云部署.md/07.腾讯云部署(centOS).md
+++ b/09_Utilties/10_云部署.md/07.腾讯云部署(centOS).md
@@ -167,10 +167,11 @@ wget https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - 
 git clone https://github.com/zsh-users/zsh-syntax-highlighting.git ${ZSH_CUSTOM:-~/.oh-my-zsh/custom}/plugins/zsh-syntax-highlighting
 ```
 
-- sudo
-
+- sudo（自带）
 
 更多配置参考这个：[树莓派提高shell逼格oh-my-zsh](https://www.jianshu.com/p/8b824bbdd471)
+
+- z（自带）
 
 7）安装 nginx
 
