react native debug

--- a/04_Framework_and_Lib/1_react/00_react_native/00.规范及debug.md
+++ b/04_Framework_and_Lib/1_react/00_react_native/00.规范及debug.md
@@ -41,3 +41,9 @@ constructor(props) {
   };
 }
 ```
+
+3. debug
+
+官方调试教程： https://facebook.github.io/react-native/docs/debugging
+
+这里有个第三方 app https://github.com/jhen0409/react-native-debugger
