--- a/09_Utilties/9_nginx/02.nginx 403.md
+++ b/09_Utilties/9_nginx/02.nginx 403.md
@@ -4,3 +4,13 @@
 2.  要访问的目录/文件没有权限。
 
 我为了省事，直接将 nginx 的用户改为 root 了。生产环境这样很不好。
+
+
+in nginx.conf:
+
+```bash
+worker_processes 4;
+user your_username;
+```
+
+from: [Nginx 403 forbidden for all files](https://stackoverflow.com/questions/6795350/nginx-403-forbidden-for-all-files#answer-27499356) 
