--- a/11_other/06_经验之谈/08_react 构建大型项目最佳实践/01.约定及技术选型.md
+++ b/11_other/06_经验之谈/08_react 构建大型项目最佳实践/01.约定及技术选型.md
@@ -1,9 +1,34 @@
-# react 
+# react
+
+要有测试（unit, acceptance, e2e, cross browser），要注意模块化（但文件大小最好控制在 1000 行以内），模块里面的方法也注意解藕，要有监控（日志），自动发布和持续继承（CICD）。
+
+这些基本原则可以保证项目开发阶段及上线后的健壮性（测试 + 监控）以及降低重构的负责度（模块化 + 解藕）。
 
 ## 约定
 
-- 
+-
 
 ## 必要的第三方依赖
 
 1. form 表单，通过 json sechema 定义 form 表单数据：[react-jsonschema-form](https://github.com/rjsf-team/react-jsonschema-form)
+
+## 测试
+
+### e2e:
+
+- 概念：所谓的“端对端”(E2E，End-to-end testing) 是指从使用者的角度出发(一端)，对真实系统(另一端)进行测试。这种类型的测试对许多公司来说，就是“人工测试”的主要范围，因为你可以透过人工对已经完整部属的网站进行测试，因此可以验证出系统是否符合客户的实际需求。这部分也可以透过撰写 E2E 测试程式来进行自动化，增加测试效率。这里有个未通过 E2E 测试的案例相当有趣，虽然每个整套系统每个模组都通过所有单元测试与整合测试，但最后组装起来后，从使用者的角度无法接受：插孔单个都可以使用，但客服的插头缺插不进去。。。
+
+- 分类：
+
+- acceptance test：
+- cross browser：[codecept](https://codecept.io/)
+
+### 单元测试 (Unit testing)
+
+- 概念：**以程式码的最小单位进行测试，保护程式逻辑不会在系统维护的过程中遭到破坏，也进一步确保维护中的程式码品质**。这种测试类型通常由开发人员自行撰写，自己写的 Code 自己写测试，有经验的开发人员可以用非常有效率的方式撰写单元测试，因为测试范围小，这种类型的测试通常不需要设立测试环境，因此可以得到较高的撰写效率，也是所有测试类型中最容易撰写的测试类型。不过，对于一个没有经验的开发者来说，撰写单元测试可能会耗用大量时间，写测试程式的时间很有可能会远大于实际撰写程式码的时间，有蛮多人会因为这样而放弃撰写单元测试。
+
+- JEST
+
+## CICD
+
+简单的如 github actions，其他定制化的有 drone 等。
